WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105581
[WK2] LocalTerminationDisabler is not needed in WebCookieManager.cpp
https://bugs.webkit.org/show_bug.cgi?id=105581
Summary
[WK2] LocalTerminationDisabler is not needed in WebCookieManager.cpp
Alexey Proskuryakov
Reported
2012-12-20 15:00:34 PST
All WebCookieManager functions are synchronous, and all LocalTerminationDisabler does enable/disable a timer that cannot fire inside the function anyway.
Attachments
proposed patch
(2.93 KB, patch)
2012-12-20 15:04 PST
,
Alexey Proskuryakov
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-12-20 15:04:43 PST
Created
attachment 180419
[details]
proposed patch In fact, most uses can be removed. Are we doing this just for consistency? I can be convinced to keep it if so. But posting to stir discussion.
Alexey Proskuryakov
Comment 2
2012-12-20 15:12:01 PST
OK, landed as <
http://trac.webkit.org/changeset/138306
>. I'll need to go over other "managers" later anyway.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug