        LocalTerminationDisabler is not needed in WebCookieManager.cpp         https://bugs.webkit.org/show_bug.cgi?id=105581

Reviewed by Anders Carlsson.

        All WebCookieManager functions are synchronous, and all LocalTerminationDisabler does
        is enable/disable a timer that cannot fire inside the function anyway.

        * WebProcess/Cookies/WebCookieManager.cpp:
        (WebKit::WebCookieManager::getHostnamesWithCookies):
        (WebKit::WebCookieManager::deleteCookiesForHostname):
        (WebKit::WebCookieManager::deleteAllCookies):
        (WebKit::WebCookieManager::startObservingCookieChanges):
        (WebKit::WebCookieManager::setHTTPCookieAcceptPolicy):
        (WebKit::WebCookieManager::getHTTPCookieAcceptPolicy):



Canonical link: https://commits.webkit.org/123792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138306 268f45cc-cd09-0410-ab3c-d52691b4dbfc